OPHYK-1072 Reject tiedotteet for unknown henkilo oids at the API