@@ -6,8 +6,6 @@ import static org.mockito.Mockito.when;
 
 import fi.vm.sade.oppijanumerorekisteri.tiedotuspalvelu.TiedotuspalveluApiTest;
 import java.io.ByteArrayInputStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.security.MessageDigest;
 import java.util.HexFormat;
 import java.util.concurrent.CompletableFuture;
@@ -16,10 +14,9 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.system.CapturedOutput;
 import org.springframework.boot.test.system.OutputCaptureExtension;
-import org.springframework.test.context.DynamicPropertyRegistry;
-import org.springframework.test.context.DynamicPropertySource;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import software.amazon.awssdk.core.ResponseInputStream;
@@ -35,19 +32,14 @@ import software.amazon.awssdk.services.s3.model.HeadObjectResponse;
 @TestPropertySource(
     properties = {
       "tiedotuspalvelu.henkilo-import.enabled=true",
-      "tiedotuspalvelu.henkilo-import.bucket-name=oppijanumerorekisteri-export",
-      "tiedotuspalvelu.henkilo-import.loader=jdbc-copy"
+      "tiedotuspalvelu.henkilo-import.bucket-name=oppijanumerorekisteri-export"
     })
 public class HenkiloImportTaskTest extends TiedotuspalveluApiTest {
 
-  private static final Path S3_ROOT = classpathS3Root();
-  private static final String BUCKET = "oppijanumerorekisteri-export";
-  private static final String MANIFEST_KEY = "fulldump/henkilo/v1/manifest.json";
+  @Value("${tiedotuspalvelu.henkilo-import.bucket-name}")
+  private String bucketName;
 
-  @DynamicPropertySource
-  static void registerProperties(DynamicPropertyRegistry registry) {
-    registry.add("tiedotuspalvelu.henkilo-import.local-fs-root", () -> S3_ROOT.toString());
-  }
+  private static final String MANIFEST_KEY = "fulldump/henkilo/v1/manifest.json";
 
   @Autowired private HenkiloImportTask henkiloImportTask;
 
@@ -68,9 +60,9 @@ public class HenkiloImportTaskTest extends TiedotuspalveluApiTest {
     var oids = jdbc.queryForList("SELECT oid FROM henkilo ORDER BY oid", String.class);
     assertThat(oids)
         .containsExactly(
-            "1.2.246.562.24.00000000001",
-            "1.2.246.562.24.00000000002",
-            "1.2.246.562.24.00000000003");
+            "1.2.246.562.24.73833272757",
+            "1.2.246.562.98.19783284870",
+            "1.2.246.562.98.77340099611");
 
     var rowCount =
         jdbc.queryForObject("SELECT row_count FROM henkilo_import WHERE id = 1", Long.class);
@@ -97,7 +89,7 @@ public class HenkiloImportTaskTest extends TiedotuspalveluApiTest {
   }
 
   @Test
-  public void reimportsWhenStoredEtagDoesNotMatch() {
+  public void reimportsWhenStoredEtagDoesNotMatch() throws Exception {
     henkiloImportTask.execute();
     jdbc.update("UPDATE henkilo_import SET manifest_etag = 'stale' WHERE id = 1");
 
@@ -122,7 +114,7 @@ public class HenkiloImportTaskTest extends TiedotuspalveluApiTest {
               var builder = HeadObjectRequest.builder();
               ((Consumer<HeadObjectRequest.Builder>) invocation.getArgument(0)).accept(builder);
               var req = builder.build();
-              var bytes = Files.readAllBytes(S3_ROOT.resolve(req.bucket()).resolve(req.key()));
+              var bytes = readClasspathForS3Key(req.bucket(), req.key());
               return CompletableFuture.completedFuture(
                   HeadObjectResponse.builder().eTag("\"" + md5Hex(bytes) + "\"").build());
             });
@@ -132,7 +124,7 @@ public class HenkiloImportTaskTest extends TiedotuspalveluApiTest {
               var builder = GetObjectRequest.builder();
               ((Consumer<GetObjectRequest.Builder>) invocation.getArgument(0)).accept(builder);
               var req = builder.build();
-              var bytes = Files.readAllBytes(S3_ROOT.resolve(req.bucket()).resolve(req.key()));
+              var bytes = readClasspathForS3Key(req.bucket(), req.key());
               var response = GetObjectResponse.builder().contentLength((long) bytes.length).build();
               var stream =
                   new ResponseInputStream<>(
@@ -141,31 +133,17 @@ public class HenkiloImportTaskTest extends TiedotuspalveluApiTest {
             });
   }
 
-  private static String manifestEtag() {
-    try {
-      return md5Hex(Files.readAllBytes(S3_ROOT.resolve(BUCKET).resolve(MANIFEST_KEY)));
-    } catch (Exception e) {
-      throw new RuntimeException(e);
+  private byte[] readClasspathForS3Key(String bucketName, String objectKey) throws Exception {
+    try (var stream = this.getClass().getResourceAsStream("/s3/" + bucketName + "/" + objectKey)) {
+      return stream.readAllBytes();
     }
   }
 
-  private static Path classpathS3Root() {
-    try {
-      var url = HenkiloImportTaskTest.class.getResource("/s3");
-      if (url == null) {
-        throw new IllegalStateException("Missing classpath resource /s3");
-      }
-      return Path.of(url.toURI());
-    } catch (java.net.URISyntaxException e) {
-      throw new RuntimeException(e);
-    }
+  private String manifestEtag() throws Exception {
+    return md5Hex(readClasspathForS3Key(bucketName, MANIFEST_KEY));
   }
 
-  private static String md5Hex(byte[] bytes) {
-    try {
-      return HexFormat.of().formatHex(MessageDigest.getInstance("MD5").digest(bytes));
-    } catch (java.security.NoSuchAlgorithmException e) {
-      throw new RuntimeException(e);
-    }
+  private String md5Hex(byte[] bytes) throws Exception {
+    return HexFormat.of().formatHex(MessageDigest.getInstance("MD5").digest(bytes));
   }
 }
